--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
-    <link rel="stylesheet" href="styles/styles.css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carlos Merino | WDD 130</title>
+    <meta name="description" content="Carlos Merinos BYU-Idaho WDD 130 course home page">
+    <meta name="author" content="Carlos Merino">    
+    <link rel="stylesheet" href="styles/styles.css">
   </head>
   <body>
     <header>
@@ -20,6 +22,14 @@
         <p>Hello! My name is Carlos Merino and I am from San Salvador, El Salvador. I enjoy spending quality time with my family and
             watch movies with them.</p>
     </main>
+    <aside>
+      <h2>San Salvador</h2>
+      <img src="images/san salvador.jpg" alt="San Salvador City">
+      <p>"San Salvador is the capital and the largest city of El Salvador and its eponymous department. 
+        It is the country's political, cultural, educational, and financial center. 
+        The Metropolitan Area of San Salvador, which comprises the capital itself and 13 of its municipalities, has a population of 2,404,097. 
+        The urban area of San Salvador has a population of 1,600,000 inhabitants." - wiki</p>
+    </aside>
     <footer>
         <p>©️2023 🌴 Carlos Merino 🌴 San Salvador, El Salvador</p>
     </footer>
