This is for my site plan rafting

--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -10,6 +10,50 @@
     <link rel="stylesheet" href="styles/site-plan-rafting.css">
 </head>
 <body>
-    
+    <header>
+        <h1>Rafting Site Plan</h1>
+        <div>Carlos Merino</div>
+    </header>
+    <main>
+        <h2>Overview</h2>
+        <h3>Purpose</h3>
+        <p>Our purpose is the become the best rafting business in the region by providing the best experience to all our customers at an affordable price.</p>
+        <h3>Audience</h3>
+        <p>Our main target will be people between their 25s and 40s, we know that some of them might have a busy life with their jobs and other responsibilities but 
+            they desire a way to disconnect themselves from that busy life and do something new and extreme.
+            On our website, they will get informed about the different packages, prices, and locations.
+        </p>
+
+        <h2>Branding</h2>
+
+        <h3>Website Logo</h3>
+        <img src="images/logo.jpg" alt="Rafting Site Logo">
+
+        <h2>Style Guide</h2>
+
+        <h3>Color Palette</h3>
+        <p>#003459, #00171f, #003459, #007ea7 </p>
+        <h3>Typography</h3>
+        <h4>Headings Example Font</h4>
+        <h4>Normal Text/Paragraph Example Font</h4>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestias quia, dolorum, consequuntur perspiciatis nobis a in ex minus accusantium suscipit totam facere corporis similique dolorem labore aut quisquam rem nulla!</p>
+        <h4>Colored Callout Example Font</h4>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In provident nobis vero quam, vel quod, aspernatur nostrum dolore nihil culpa quidem odit ratione, eligendi natus error! Perferendis ea illo suscipit?</p>
+        <h3>Navigation</h3>
+        <nav>
+            <a href="#">Home</a>
+            <a href="#">Page 2</a>
+            <a href="#">Contact Us</a>
+        </nav>
+
+        <h2>Wireframes</h2>
+        <h3>Home Page Wireframes</h3>
+        <img src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe_home.png" alt="Required Home Page Wireframe Design">
+        <h3>About Us Page Wireframe</h3>
+        <img src="https://byui-cse.github.io/wdd130-ww-course/images/wwr/wwr-wireframe-aboutus-update.png" alt="About Us Page Wireframe Design" width="700">
+    </main>  
+    <footer>
+        <p>©️2023 🌴 Rafting Site Document 🌴 Carlos Merino 🌴 WDD 130</p>
+    </footer>
 </body>
 </html>
