Enhancing Your Course Home Page

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- 11 March 2023 -->
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
@@ -14,6 +15,8 @@
             <a href="#">Home</a>
             <a href="wwr/">White Water Rafting Website</a>
             <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
+            <a href="https://www.linkedin.com/in/carlos-merino-3b7529134/">Lineding Profile</a>
+            <a href="https://www.facebook.com/">Facebook Page</a>
         </nav>
     </header>
     <main>
@@ -21,10 +24,18 @@
         <img src="images/profile.jpg" alt="Hello, my name is Carlos Merino" width="200">
         <p>Hello! My name is Carlos Merino and I am from San Salvador, El Salvador. I enjoy spending quality time with my family and
             watch movies with them.</p>
+  <ul class="box">
+    <li><a href="https://www.churchofjesuschrist.org/temples/details/buenos-aires-argentina-temple?"
+         target="_blank">Buenos Aires Argentina Temple</a></li>
+    <li><a href="https://www.churchofjesuschrist.org/temples/details/san-salvador-el-salvador-temple"
+         target="_blank">San Salvador El Salvador Temple</a></li>
+    <li><a href="https://www.churchofjesuschrist.org/temples/details/san-diego-california-temple"
+         target="_blank">San Diego California Temple</a></li>
+  </ul>
     </main>
-    <aside>
+    <aside class="box">
       <h2>San Salvador</h2>
-      <img src="images/san salvador.jpg" alt="San Salvador City">
+      <img src="images/san-salvador.jpg" alt="San Salvador City">
       <p>"San Salvador is the capital and the largest city of El Salvador and its eponymous department. 
         It is the country's political, cultural, educational, and financial center. 
         The Metropolitan Area of San Salvador, which comprises the capital itself and 13 of its municipalities, has a population of 2,404,097. 
@@ -34,4 +45,4 @@
         <p>©️2023 🌴 Carlos Merino 🌴 San Salvador, El Salvador</p>
     </footer>
   </body>
-</html>
+</html> 
