--- a/wwr/about.html
+++ b/wwr/about.html
@@ -5,17 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us</title>
-    <link rel="stylesheet" href="style.css">
-
-    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/rafting.css">
 </head>
 <body>
     <header>
             <nav>
-            <a href="index.html"></a> 
-            <a href="about.html"></a> 
-            <a href="trips.html"></a>  
-            <a href="contact.html"></a>
+            <a href="index.html">Home</a> 
+            <a href="about.html">About Us</a> 
+            <a href="trips.html">Trips</a>  
+            <a href="contact.html">Contact Us</a>
             </nav>
             <img src="images/logo.jpg" alt="Rafting Logo">
     </header>
