Week 4 index changes

--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
     <header>
         <nav>
             <a href="#">Home</a>
-            <a href="wwr/">White Water Rafting Website</a>
-            <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
+            <a href="wwr/">Rafting Website</a>
+            <a href="wwr/site-plan-rafting.html">Site Plan</a>
             <a href="https://www.linkedin.com/in/carlos-merino-3b7529134/">Lineding Profile</a>
             <a href="https://www.facebook.com/">Facebook Page</a>
         </nav>
     </header>
+    <div class="grid">
     <main>
         <h1>Carlos Merino | WDD 130</h1>
         <img src="images/profile.jpg" alt="Hello, my name is Carlos Merino" width="200">
@@ -41,6 +42,7 @@
         The Metropolitan Area of San Salvador, which comprises the capital itself and 13 of its municipalities, has a population of 2,404,097. 
         The urban area of San Salvador has a population of 1,600,000 inhabitants." - wiki</p>
     </aside>
+    </div>
     <footer>
         <p>©️2023 🌴 Carlos Merino 🌴 San Salvador, El Salvador</p>
     </footer>
