--- a/wwr/about.html
+++ b/wwr/about.html
@@ -9,19 +9,21 @@
 </head>
 <body>
     <header>
-            <nav>
+        <!-- <h1>Above and Beyond Rafting</h1> -->
+        <nav>
+        <ul class="navigation">
             <a href="index.html">Home</a> 
             <a href="about.html">About Us</a> 
             <a href="trips.html">Trips</a>  
             <a href="contact.html">Contact Us</a>
-            </nav>
+            </ul>
+        </nav>
             <img src="images/logo.jpg" alt="Rafting Logo">
     </header>
     <main>
         <div class="hero">
             <img src="images/rafting.jpg" alt="Rafting Background">
         </div>
-        <h1>Above and Beyond Rafting</h1>
         <article>
             <h3>
             <img src="images/happy-client.jpg" alt="Happy Client">
