week 4 about site

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -12,13 +12,13 @@
         <!-- <h1>Above and Beyond Rafting</h1> -->
         <nav>
         <ul class="navigation">
-            <a href="index.html">Home</a> 
-            <a href="about.html">About Us</a> 
-            <a href="trips.html">Trips</a>  
-            <a href="contact.html">Contact Us</a>
+            <a href="#">Home</a> 
+            <a href="#">About Us</a> 
+            <a href="#">Trips</a>  
+            <a href="#">Contact Us</a>
             </ul>
         </nav>
-            <img src="images/logo.jpg" alt="Rafting Logo">
+            <img src="images/logo1.jpg" alt="Rafting Logo">
     </header>
     <main>
         <div class="hero">
@@ -26,7 +26,7 @@
         </div>
         <article>
             <h3>
-            <img src="images/happy-client.jpg" alt="Happy Client">
+            <img src="images/happy-client 1.jpg" alt="Happy Client">
             <p>Our purpose is the become the best rafting business in the region by providing the best experience to all our customers at an affordable price.</p>
             </h3>
         </article>
